[build-system]
requires = ["setuptools>=61.2", "testtools", "iso8601"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[project]
name = "python-subunit"
description = "Python implementation of subunit test streaming protocol"
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
keywords = ["python", "test", "streaming"]
authors = [{name = "Robert Collins", email = "subunit-dev@lists.launchpad.net"}]
license = {text = "Apache-2.0 or BSD"}
dependencies = [
    "iso8601",
    "testtools>=0.9.34",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "http://launchpad.net/subunit"
"Bug Tracker" = "https://bugs.launchpad.net/subunit"
"Source Code" = "https://github.com/testing-cabal/subunit/"

[project.optional-dependencies]
"docs" = ["docutils"]
"test" = ["fixtures", "testscenarios", "hypothesis"]

[tool.setuptools.packages.find]
where = ["python"]
include = ["subunit*"]

[project.scripts]
"subunit-1to2" = "subunit.filter_scripts.subunit_1to2:main"
"subunit-2to1" = "subunit.filter_scripts.subunit_2to1:main"
"subunit-filter" = "subunit.filter_scripts.subunit_filter:main"
"subunit-ls" = "subunit.filter_scripts.subunit_ls:main"
"subunit-notify" = "subunit.filter_scripts.subunit_notify:main"
"subunit-output" = "subunit.filter_scripts.subunit_output:main"
"subunit-stats" = "subunit.filter_scripts.subunit_stats:main"
"subunit-tags" = "subunit.filter_scripts.subunit_tags:main"
"subunit2csv" = "subunit.filter_scripts.subunit2csv:main"
"subunit2disk" = "subunit.filter_scripts.subunit2disk:main"
"subunit2gtk" = "subunit.filter_scripts.subunit2gtk:main"
"subunit2junitxml" = "subunit.filter_scripts.subunit2junitxml:main"
"subunit2pyunit" = "subunit.filter_scripts.subunit2pyunit:main"
"tap2subunit" = "subunit.filter_scripts.tap2subunit:main"

[tool.setuptools.dynamic]
version = {attr = "subunit.version_string"}

[tool.setuptools]
license-files = ["COPYING"]
