[build-system]
build-backend = "setuptools.build_meta"
requires = ["iso8601", "setuptools>=61.2", "testtools"]

[tool.ruff]
line-length = 120

[project]
authors = [
    { name = "Robert Collins", email = "subunit-dev@lists.launchpad.net" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
]
dependencies = ["iso8601", "testtools>=2.5"]
description = "Python implementation of subunit test streaming protocol"
dynamic = ["version"]
keywords = ["python", "streaming", "test"]
license = { text = "Apache-2.0 or BSD" }
name = "python-subunit"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Bug Tracker" = "https://bugs.launchpad.net/subunit"
Homepage = "http://launchpad.net/subunit"
"Source Code" = "https://github.com/testing-cabal/subunit/"

[project.optional-dependencies]
"docs" = ["docutils"]
"test" = ["fixtures", "hypothesis", "testscenarios"]

[tool.setuptools.packages.find]
include = ["subunit*"]
where = ["python"]

[project.scripts]
"subunit-1to2" = "subunit.filter_scripts.subunit_1to2:main"
"subunit-2to1" = "subunit.filter_scripts.subunit_2to1:main"
"subunit-filter" = "subunit.filter_scripts.subunit_filter:main"
"subunit-ls" = "subunit.filter_scripts.subunit_ls:main"
"subunit-notify" = "subunit.filter_scripts.subunit_notify:main"
"subunit-output" = "subunit.filter_scripts.subunit_output:main"
"subunit-stats" = "subunit.filter_scripts.subunit_stats:main"
"subunit-tags" = "subunit.filter_scripts.subunit_tags:main"
"subunit2csv" = "subunit.filter_scripts.subunit2csv:main"
"subunit2disk" = "subunit.filter_scripts.subunit2disk:main"
"subunit2gtk" = "subunit.filter_scripts.subunit2gtk:main"
"subunit2junitxml" = "subunit.filter_scripts.subunit2junitxml:main"
"subunit2pyunit" = "subunit.filter_scripts.subunit2pyunit:main"
"tap2subunit" = "subunit.filter_scripts.tap2subunit:main"

[tool.setuptools.dynamic]
version = { attr = "subunit.version_string" }

[tool.setuptools]
license-files = ["COPYING"]
